--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -61,6 +61,7 @@
   }
 }
 .page-header__content {
+  z-index: 100;
   opacity: 0;
   pointer-events: none;
   position: absolute;
